plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
    id 'idea'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}


compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

dependencies {
    implementation 'org.testng:testng:6.14.3'
    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: 'LATEST'
    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:2.53.1'
    testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:2.53.1'
    testCompile 'org.seleniumhq.selenium:selenium-ie-driver:2.53.1'
    testCompile 'org.seleniumhq.selenium:selenium-remote-driver:3.6.0'
    testCompile 'com.codeborne:selenide:5.3.1'
    testCompile 'com.codeborne:phantomjsdriver:1.3.0'
    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}


//tasks.withType(Test) {
    // run tests with -info or -debug option to get logging
    //jvmArgs '-Xms128m', '-Xmx1024m', '-XX:MaxPermSize=128m'
   //systemProperties['hubIP'] = '127.0.0.1'
    //systemProperties['hubPort'] = '4444'
    //systemProperties['testURL'] = 'https://www.etsy.com/'
    //systemProperties['windowXPosition'] = '40'
    //systemProperties['windowYPosition'] = '40'
    //systemProperties['windowWidth'] = '900'
    //systemProperties['windowHeight'] = '600'
//}

// single test tasks

//task runDebugSingle(type: Test) {
    //maxParallelForks = 1
    //systemProperties['browser'] = 'firefox'
    //include '**/DebugSingle.class'
    //reports.junitXml.destination = "$buildDir/test-results/DebugSingle"
    //reports.html.destination = "$buildDir/test-results/DebugSingle"
//}

//task runParameterizedExample(type: Test) {
    //include '**/DataProviderTest.class'
    // test output goes to default location
//}

// parallel test tasks

//task runAllTestsInFirefox(type: Test) {
    //maxParallelForks = 2
    //systemProperties['browser'] = 'firefox'
    //include '**/EtsyTest*.class'
    //reports.junitXml.destination = "$buildDir/test-results/EtsyTestFF"
    //reports.html.destination = "$buildDir/test-results/EtsyTestFF"
//}

//task runAllTestsInIE(type: Test) {
    //maxParallelForks = 2
    //systemProperties['browser'] = 'ie'
    //include '**/EtsyTest*.class'
    //reports.junitXml.destination = "$buildDir/test-results/EtsyTestIE"
    //reports.html.destination = "$buildDir/test-results/EtsyTestIE"
//}

//task runAllTestsInChrome(type: Test) {
    //maxParallelForks = 2
    //systemProperties['browser'] = 'chrome'
    //systemProperties['webdriver.chrome.driver'] = "/usr/local/bin/chromedriver"
    //println 'драйвер вроде как задан'
    //include '**/SampleTest*.class'
    //reports.junitXml.destination = "$buildDir/test-results/EtsyTestCH"
    //reports.html.destination = "$buildDir/test-results/EtsyTestCH"

//}